// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Card test Preview is ok 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card projectCard previewProjectCard"
    data-testid="project-card-dummy_nametestOrg"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="colorBar"
          style="background-color: rgb(0, 99, 247);"
        />
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 1;"
        >
          dummy name
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main projectId StyledProps--font-variation-small StyledProps--margin-top-xsmall StyledProps--color StyledProps--color-grey700"
          style="--text-line-clamp: 1;"
        >
          idLabel
        </p>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              adminLabel (1)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="19bYA-ooQZOTZQxf2N-VPA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              collaboratorsLabel (5)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="BnTbQTIJS4SkadzYv0BcbA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                + 4
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main started StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--padding-bottom-xlarge"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-xsmall"
      >
        modules
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="cd-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
              fill="url(#cd-main_svg__a)"
              fill-rule="evenodd"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cd-main_svg__a"
                x1="6.774"
                x2="21.5"
                y1="2"
                y2="30"
              >
                <stop
                  stop-color="#62F91F"
                />
                <stop
                  offset="1"
                  stop-color="#45BD35"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ci-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
              fill="url(#ci-main_svg__a)"
              fill-rule="evenodd"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="ci-main_svg__a"
                x1="-5.398"
                x2="11.398"
                y1="11.398"
                y2="37.398"
              >
                <stop
                  stop-color="#73DFE7"
                />
                <stop
                  offset="1"
                  stop-color="#0095F7"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="cf-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
              fill="url(#cf-main_svg__a)"
            />
            <path
              d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
              fill="url(#cf-main_svg__b)"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cf-main_svg__a"
                x1="6.837"
                x2="23.78"
                y1="2"
                y2="28.227"
              >
                <stop
                  stop-color="#FFC100"
                />
                <stop
                  offset="1"
                  stop-color="#E66B35"
                />
              </lineargradient>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cf-main_svg__b"
                x1="6.837"
                x2="23.78"
                y1="2"
                y2="28.227"
              >
                <stop
                  stop-color="#FFC100"
                />
                <stop
                  offset="1"
                  stop-color="#E66B35"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ce-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
              fill="url(#ce-main_svg__a)"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="ce-main_svg__a"
                x1="5.821"
                x2="19.271"
                y1="4.393"
                y2="33.469"
              >
                <stop
                  stop-color="#00CFDE"
                />
                <stop
                  offset="1"
                  stop-color="#05A660"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="cv-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.194 29.156l.417.24c.425.238.904.359 1.389.351a2.75 2.75 0 001.361-.351l.417-.24c6.618-3.78 10.715-10.877 10.722-18.575v-.197a2.822 2.822 0 00-1.389-2.463l-.332-.189L15.94 21.381a.67.67 0 01-.926.119L8.82 16.855a.67.67 0 01-.134-.938l.344-.46a.67.67 0 01.938-.133l4.705 3.528c.29.218.7.165.926-.12l9.498-11.96-7.708-4.395a2.747 2.747 0 00-2.778 0L4.89 7.921A2.822 2.822 0 003.5 10.384v.197c.002 7.692 4.087 14.788 10.694 18.575z"
              fill="url(#cv-main_svg__a)"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cv-main_svg__a"
                x1="7.827"
                x2="23.016"
                y1="2"
                y2="28.457"
              >
                <stop
                  stop-color="#BEA1FF"
                />
                <stop
                  offset="1"
                  stop-color="#8A36FF"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Card test initializes ok  1`] = `
<div>
  <div
    class="bp3-card bp3-interactive bp3-elevation-0 Card--card projectCard Card--interactive"
    data-testid="project-card-dummy_nametestOrg"
    tabindex="0"
  >
    <div
      class="StyledProps--font StyledProps--main projectInfo StyledProps--padding-xlarge"
    >
      <div
        class="Card--cardMenu"
      >
        <div
          class="Card--dots"
        >
          <span
            class="bp3-popover-wrapper bp3-dark"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Card--menu Button--with-current-color Button--round Button--iconOnly Button--without-shadow Button--withLeftIcon"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-more StyledProps--main"
                  icon="more"
                >
                  <svg
                    data-icon="more"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      more
                    </desc>
                    <path
                      d="M2 6.03a2 2 0 100 4 2 2 0 100-4zM14 6.03a2 2 0 100 4 2 2 0 100-4zM8 6.03a2 2 0 100 4 2 2 0 100-4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="colorBar"
          style="background-color: rgb(0, 99, 247);"
        />
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-medium StyledProps--color StyledProps--color-black"
          style="--text-line-clamp: 1;"
        >
          dummy name
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main projectId StyledProps--font-variation-small StyledProps--margin-top-xsmall StyledProps--color StyledProps--color-grey700"
          style="--text-line-clamp: 1;"
        >
          idLabel
        </p>
        <div
          class="StyledProps--font StyledProps--main StyledProps--margin-top-small StyledProps--margin-bottom-small"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold"
            style="--text-line-clamp: 1; display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-small"
              data-icon="union"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 14 15"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M7 5.885c1.289 0 2.333-1.106 2.333-2.47C9.333 2.05 8.29.945 7 .945c-1.289 0-2.333 1.105-2.333 2.47 0 1.364 1.044 2.47 2.333 2.47zm0-.823c.86 0 1.556-.737 1.556-1.647S7.859 1.768 7 1.768c-.859 0-1.555.737-1.555 1.647S6.14 5.062 7 5.062zm-2.333 7.41c0 1.365-1.045 2.47-2.334 2.47-1.288 0-2.333-1.105-2.333-2.47 0-1.103.684-2.038 1.627-2.355a6.139 6.139 0 01-.071-.937c0-2.321 1.296-4.323 3.164-5.236.049.236.13.46.237.666-1.586.81-2.701 2.534-2.701 4.57 0 .28.02.555.061.822h.016c1.289 0 2.334 1.106 2.334 2.47zm-.778-.001c0 .91-.697 1.647-1.556 1.647-.859 0-1.555-.737-1.555-1.647s.696-1.647 1.555-1.647c.86 0 1.556.737 1.556 1.647zM14 12.473c0 1.364-1.045 2.47-2.333 2.47-1.289 0-2.334-1.106-2.334-2.47 0-1.365 1.045-2.471 2.334-2.471h.016a5.54 5.54 0 00.061-.822c0-2.036-1.115-3.76-2.7-4.57.107-.206.187-.43.236-.666 1.868.913 3.164 2.915 3.164 5.236 0 .32-.024.632-.071.937.943.317 1.627 1.252 1.627 2.355zm-.778-.002c0 .91-.696 1.647-1.555 1.647-.86 0-1.556-.737-1.556-1.647s.696-1.647 1.556-1.647c.859 0 1.555.737 1.555 1.647zm-3.694.994c.091.22.212.424.357.605a5.2 5.2 0 01-5.77 0 2.5 2.5 0 00.357-.605c.736.495 1.605.78 2.528.78s1.792-.285 2.528-.78z"
                  fill="#383946"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            Org Name
          </p>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-small"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
          >
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tagClassName"
                style="max-width: 75px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag1
                </span>
              </span>
            </span>
            <span
              class="Tag--main"
            >
              <span
                class="bp3-tag tagClassName"
                style="max-width: 75px;"
              >
                <span
                  class="bp3-text-overflow-ellipsis bp3-fill"
                >
                  tag2:tag3
                </span>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                  tabindex="0"
                >
                  plus3
                </p>
              </span>
            </span>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--padding-top-medium"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              adminLabel (1)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="19bYA-ooQZOTZQxf2N-VPA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            >
              collaboratorsLabel (5)
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="AvatarGroup--stack projectAvatarGroup"
                style="--avatar-over-lap: -13px;"
              >
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        +
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="AvatarGroup--stackAvatar Avatar--Avatar Avatar--contentStyle"
                  uuid="BnTbQTIJS4SkadzYv0BcbA"
                >
                  <span
                    class="bp3-popover-wrapper Avatar--avatarPopOver"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="Avatar--AvatarInner"
                        style="border-radius: 100%; line-height: 26px; width: 32px; height: 32px; font-size: 10px;"
                        tabindex="0"
                      >
                        E
                      </div>
                    </span>
                  </span>
                </div>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                + 4
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--vertical StyledProps--main started StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--padding-bottom-xlarge"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--padding-bottom-xsmall"
      >
        modules
      </p>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="cd-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M26.427 7.06A5.073 5.073 0 0129 11.52l-.077 8.934a5.073 5.073 0 01-2.537 4.35l-8.002 4.618a5.073 5.073 0 01-5.035.021l-7.776-4.402A5.073 5.073 0 013 20.583l.077-8.935a5.073 5.073 0 012.537-4.35l8.002-4.619a5.073 5.073 0 015.035-.02l7.776 4.402zm-2.83 6.938c-.42 1.586-2.029 2.538-3.601 2.141l-7.489-2.026a4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.925 4.835 4.835 0 00.479 3.664 4.757 4.757 0 002.905 2.251 4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.924l.26-1.047a.25.25 0 00-.177-.302l-1.258-.34a.25.25 0 00-.307.18l-.256 1.025c-.426 1.602-2.064 2.556-3.651 2.127-1.582-.428-2.523-2.073-2.1-3.67.421-1.586 2.03-2.538 3.602-2.142l7.489 2.027a4.696 4.696 0 003.62-.48 4.773 4.773 0 002.222-2.925 4.835 4.835 0 00-.479-3.664 4.757 4.757 0 00-2.905-2.251 4.696 4.696 0 00-3.62.48 4.773 4.773 0 00-2.222 2.924l-.247.828a.25.25 0 00.174.312l1.259.34a.25.25 0 00.304-.169l.248-.827c.426-1.602 2.064-2.557 3.651-2.127 1.582.428 2.523 2.073 2.1 3.67z"
              fill="url(#cd-main_svg__a)"
              fill-rule="evenodd"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cd-main_svg__a"
                x1="6.774"
                x2="21.5"
                y1="2"
                y2="30"
              >
                <stop
                  stop-color="#62F91F"
                />
                <stop
                  offset="1"
                  stop-color="#45BD35"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ci-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M29 16a13.02 13.02 0 01-.854 4.6.387.387 0 01-.637.13l-3.99-3.94a.534.534 0 01-.085-.628c.432-.827.649-1.773.649-2.762.056-3.222-2.6-5.878-5.879-5.878-1.04 0-1.994.26-2.823.706a.53.53 0 01-.623-.08l-3.551-3.504a.48.48 0 01.154-.794A12.79 12.79 0 0116 3c7.178 0 13 5.822 13 13zM8.476 5.42a.582.582 0 01.746.072l4.035 4.035c.179.178.194.46.054.67a5.829 5.829 0 00-.985 3.26 5.934 5.934 0 005.935 5.934 5.829 5.829 0 003.26-.985.531.531 0 01.67.054l4.367 4.368a.582.582 0 01.065.756C24.225 26.86 20.4 29 16 29 8.822 29 3 23.178 3 16c0-4.403 2.144-8.231 5.476-10.58zm9.785 11.71a3.932 3.932 0 003.956-3.956 3.932 3.932 0 00-3.956-3.957 3.932 3.932 0 00-3.957 3.957 3.932 3.932 0 003.957 3.956z"
              fill="url(#ci-main_svg__a)"
              fill-rule="evenodd"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="ci-main_svg__a"
                x1="-5.398"
                x2="11.398"
                y1="11.398"
                y2="37.398"
              >
                <stop
                  stop-color="#73DFE7"
                />
                <stop
                  offset="1"
                  stop-color="#0095F7"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="cf-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.464 1.316a.2.2 0 00.207-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.397 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012L10.633 2.08z"
              fill="url(#cf-main_svg__a)"
            />
            <path
              d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.266.902z"
              fill="url(#cf-main_svg__b)"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cf-main_svg__a"
                x1="6.837"
                x2="23.78"
                y1="2"
                y2="28.227"
              >
                <stop
                  stop-color="#FFC100"
                />
                <stop
                  offset="1"
                  stop-color="#E66B35"
                />
              </lineargradient>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cf-main_svg__b"
                x1="6.837"
                x2="23.78"
                y1="2"
                y2="28.227"
              >
                <stop
                  stop-color="#FFC100"
                />
                <stop
                  offset="1"
                  stop-color="#E66B35"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="ce-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.84 26.552a.5.5 0 00.5.5h8.343v-.005a6.579 6.579 0 00.284-13.13.548.548 0 01-.492-.429C23.563 9.21 19.761 6 15.21 6a9.473 9.473 0 00-9.474 9.473c0 .056-.039.103-.093.114a5.791 5.791 0 001.146 11.465h6.661a.5.5 0 00.5-.5v-1.568a.527.527 0 00-.436-.51c-1.04-.2-1.932-.63-2.542-1.244-.546-.55-.872-1.232-.973-2.032-.035-.277.194-.505.474-.504l1.113.005c.268.001.48.215.541.475.256 1.093 1.245 1.813 2.711 1.82.571.003 2.7-.264 2.707-1.736.006-1.177-1.542-1.623-3.006-1.984a38.2 38.2 0 01-.758-.193c-1.656-.44-3.407-.943-3.398-3.062.01-2.058 1.742-3.119 3.567-3.335V10.71a.5.5 0 01.5-.5h.887a.5.5 0 01.5.5v2.028c1.316.212 3.089.878 3.39 2.906.04.28-.19.512-.472.511l-1.12-.005c-.256-.001-.463-.2-.54-.445-.29-.926-1.2-1.488-2.532-1.494-.886-.005-2.17.466-2.176 1.54-.005.973.74 1.305 3.52 2.023l.369.094.148.036c1.06.256 3.232.78 3.221 3.11-.008 1.839-1.265 3.096-3.364 3.47a.526.526 0 00-.442.511v1.557z"
              fill="url(#ce-main_svg__a)"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="ce-main_svg__a"
                x1="5.821"
                x2="19.271"
                y1="4.393"
                y2="33.469"
              >
                <stop
                  stop-color="#00CFDE"
                />
                <stop
                  offset="1"
                  stop-color="#05A660"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
        <span
          class="bp3-icon StyledProps--main"
          data-icon="cv-main"
        >
          <svg
            height="20"
            viewBox="0 0 32 32"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.194 29.156l.417.24c.425.238.904.359 1.389.351a2.75 2.75 0 001.361-.351l.417-.24c6.618-3.78 10.715-10.877 10.722-18.575v-.197a2.822 2.822 0 00-1.389-2.463l-.332-.189L15.94 21.381a.67.67 0 01-.926.119L8.82 16.855a.67.67 0 01-.134-.938l.344-.46a.67.67 0 01.938-.133l4.705 3.528c.29.218.7.165.926-.12l9.498-11.96-7.708-4.395a2.747 2.747 0 00-2.778 0L4.89 7.921A2.822 2.822 0 003.5 10.384v.197c.002 7.692 4.087 14.788 10.694 18.575z"
              fill="url(#cv-main_svg__a)"
            />
            <defs>
              <lineargradient
                gradientUnits="userSpaceOnUse"
                id="cv-main_svg__a"
                x1="7.827"
                x2="23.016"
                y1="2"
                y2="28.457"
              >
                <stop
                  stop-color="#BEA1FF"
                />
                <stop
                  offset="1"
                  stop-color="#8A36FF"
                />
              </lineargradient>
            </defs>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
